--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+//    implementation 'org.mockito:mockito-core:3.8.0'
+    implementation project(':smock')
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     testImplementation 'junit:junit:4.12'
