--- a/smock/build.gradle
+++ b/smock/build.gradle
@@ -18,4 +18,7 @@ android {
 }
 
 dependencies {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'net.bytebuddy:byte-buddy:1.11.12'
+    implementation 'net.bytebuddy:byte-buddy-agent:1.11.12'
 }
